--- a/registro/register.html
+++ b/registro/register.html
@@ -13,7 +13,7 @@
       <img src="./assets/logo.png" alt="Logo JM" class="logo" />
       <nav class="navbar">
         <ul class="navbar-list">
-          <li><a href="https://integradorjs-gray.vercel.app/"><img src="/assets/home-2.svg" alt="" class="iconohome" ></a></li>
+          <li><a href="/index.html"><img src="/registro/assets/home-2.svg" alt="" class="iconohome" ></a></li>
         </ul>
       </nav>
     </header>
