--- a/registro/register.html
+++ b/registro/register.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>JM Telefonia</title>
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo.png" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./login.css" />
+    <link rel="stylesheet" href="./query.css">
   </head>
   <body>
     <header>
       <img src="./assets/logo.png" alt="Logo JM" class="logo" />
       <nav class="navbar">
         <ul class="navbar-list">
-          <li><a href="/index.html"><img src="/registro/assets/home-2.svg" alt="" class="iconohome" ></a></li>
+          <li><a href="https://integradorjs-gray.vercel.app/" class="nabvar-link"><img src="/assets/home-2.svg" alt="" class="iconohome" ></a></li>
         </ul>
       </nav>
     </header>
