--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a class="navbar-link" href="#products">CaseShop</a></li>
 
         <li>
-          <a href="/registro/register.html" target="_blank">Registrarse</a>
+          <a href="/registro/register.html" target="_self">Registrarse</a>
         </li>
         <li>
           <a href="" target="_blank">Login</a>
