--- a/registro/register.html
+++ b/registro/register.html
@@ -18,7 +18,7 @@
       <img src="./assets/logo.png" alt="Logo JM" class="logo" />
       <nav class="navbar">
         <ul class="navbar-list">
-          <li><a href="/index.html" class="nabvar-link"><img src="/registro/assets/home-2.svg" alt="" class="iconohome" ></a></li>
+          <li><a href="/index.html" target="_self" class="nabvar-link"><img src="/registro/assets/home-2.svg" target="_self" alt="" class="iconohome"  ></a></li>
         </ul>
       </nav>
     </header>
